--- a/StateManagement/Views/Home/Login.cshtml
+++ b/StateManagement/Views/Home/Login.cshtml
@@ -1,5 +1,5 @@
 ﻿<br />
-<form action="UserDetails" method="post">
+<form action="ValidLogin" method="post">
     <fieldset>
         <legend><b>Hello! Please Sign:</b></legend>
         <input type="email" name="Email" placeholder="Email" required class="form-control" /> <br />
